--- a/Aim! For watchOS/Base.lproj/Interface.storyboard
+++ b/Aim! For watchOS/Base.lproj/Interface.storyboard
@@ -14,22 +14,22 @@
         </array>
     </customFonts>
     <scenes>
-        <!--Aim Main Interface Controller-->
+        <!--Interface Controller-->
         <scene sceneID="4hi-jR-Kag">
             <objects>
-                <controller id="Kcj-o3-Mv4" customClass="AimMainInterfaceController">
+                <controller id="Kcj-o3-Mv4">
                     <items>
                         <group width="147" height="50" alignment="center" radius="7" id="uXT-To-DBm">
                             <items>
                                 <label width="1" height="54" alignment="center" text="Aim!" textAlignment="center" id="bA6-tC-Ylm">
-                                    <color key="textColor" red="1" green="0.29019607843137252" blue="0.10980392156862745" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="textColor" red="1" green="0.185564382" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <fontDescription key="font" name="PhosphatePro-Inline" family="Phosphate Pro" pointSize="27"/>
                                 </label>
                             </items>
                             <color key="backgroundColor" red="0.10196078431372549" green="0.078431372549019607" blue="0.13725490196078433" alpha="1" colorSpace="calibratedRGB"/>
                         </group>
                         <separator alignment="center" id="fHM-rM-zom">
-                            <color key="color" red="1" green="0.29019607843137252" blue="0.10980392156862745" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="color" red="1" green="0.185564382" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
                         </separator>
                         <label height="35" alignment="center" text="Use Aim! To Boost Your Productivity!" textAlignment="center" numberOfLines="0" id="DLW-c8-80L">
                             <fontDescription key="font" type="system" pointSize="12"/>
@@ -37,14 +37,14 @@
                         <group width="1" height="60" alignment="center" id="XKG-ub-hko">
                             <items>
                                 <button width="0.5" height="60" alignment="left" title="Sessions" id="ZOT-Sz-ZnS">
-                                    <color key="titleColor" red="1" green="0.2901960784" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" red="1" green="0.185564382" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <fontDescription key="font" name="PhosphatePro-Inline" family="Phosphate Pro" pointSize="13"/>
                                     <connections>
-                                        <segue destination="l1H-L2-trl" kind="modal" id="GsZ-08-wS5"/>
+                                        <segue destination="2YE-aA-ly4" kind="push" id="OBb-ei-bhC"/>
                                     </connections>
                                 </button>
                                 <button width="0.5" height="1" alignment="right" title="Awards" id="tvU-5d-t87">
-                                    <color key="titleColor" red="1" green="0.2901960784" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" red="1" green="0.185564382" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <fontDescription key="font" name="PhosphatePro-Inline" family="Phosphate Pro" pointSize="13"/>
                                     <connections>
                                         <segue destination="h1y-vm-7uY" kind="modal" id="CAZ-xa-uKW"/>
@@ -66,8 +66,8 @@
                         <group width="1" height="30" alignment="center" id="MVK-Al-b8b">
                             <items>
                                 <label alignment="center" verticalAlignment="center" text="Awards" textAlignment="center" id="XnV-ef-O2Y">
-                                    <color key="textColor" red="1" green="0.29019607843137252" blue="0.10980392156862745" alpha="1" colorSpace="calibratedRGB"/>
-                                    <fontDescription key="font" name="PhosphatePro-Inline" family="Phosphate Pro" pointSize="17"/>
+                                    <color key="textColor" red="1" green="0.185564382" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <fontDescription key="font" name="PhosphatePro-Inline" family="Phosphate Pro" pointSize="19"/>
                                 </label>
                             </items>
                             <color key="backgroundColor" red="0.10196078431372549" green="0.078431372549019607" blue="0.13725490196078433" alpha="1" colorSpace="calibratedRGB"/>
@@ -109,7 +109,79 @@
                     </items>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="455" y="222"/>
+            <point key="canvasLocation" x="615" y="479"/>
+        </scene>
+        <!--Aim Main Session Selection Interface Controller-->
+        <scene sceneID="4me-pA-pFC">
+            <objects>
+                <controller id="2YE-aA-ly4" customClass="AimMainSessionSelectionInterfaceController" customModule="Aim_">
+                    <items>
+                        <group width="1" height="30" alignment="left" id="IgH-xa-yuU">
+                            <items>
+                                <label alignment="center" verticalAlignment="center" text="Sessions" id="8WJ-Zt-fer">
+                                    <color key="textColor" red="1" green="0.185564382" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <fontDescription key="font" name="PhosphatePro-Inline" family="Phosphate Pro" pointSize="19"/>
+                                </label>
+                            </items>
+                            <color key="backgroundColor" red="0.10196078431372549" green="0.078431372549019607" blue="0.13725490196078433" alpha="1" colorSpace="calibratedRGB"/>
+                        </group>
+                        <group width="1" alignment="left" id="S86-xo-TQT">
+                            <items>
+                                <table alignment="left" id="GV8-80-drt">
+                                    <items>
+                                        <tableRow id="Vzd-7u-pLt">
+                                            <group key="rootItem" width="1" alignment="left" id="BET-u2-W8K">
+                                                <items>
+                                                    <label alignment="left" verticalAlignment="center" text="Physics HW" textAlignment="center" minimumScaleFactor="0.69999999999999996" id="oqS-LO-s8w">
+                                                        <color key="textColor" red="1" green="0.185564382" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <fontDescription key="font" name="PhosphatePro-Inline" family="Phosphate Pro" pointSize="15"/>
+                                                    </label>
+                                                </items>
+                                                <connections>
+                                                    <segue destination="Txb-gJ-Yzy" kind="modal" id="hOR-6B-yaW"/>
+                                                </connections>
+                                            </group>
+                                        </tableRow>
+                                    </items>
+                                </table>
+                            </items>
+                            <color key="backgroundColor" red="0.1019607843" green="0.078431372550000003" blue="0.13725490200000001" alpha="1" colorSpace="calibratedRGB"/>
+                        </group>
+                    </items>
+                    <connections>
+                        <outlet property="aimSessionTable" destination="GV8-80-drt" id="8Vp-zD-P3b"/>
+                    </connections>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="454" y="157"/>
+        </scene>
+        <!--Interface Controller-->
+        <scene sceneID="0k8-f4-WQd">
+            <objects>
+                <controller id="Txb-gJ-Yzy">
+                    <items>
+                        <group width="1" height="45" alignment="left" id="70R-6x-lFP">
+                            <items>
+                                <label alignment="center" verticalAlignment="center" text="Physics HW" textAlignment="center" minimumScaleFactor="0.29999999999999999" id="mP7-qS-pkk">
+                                    <color key="textColor" red="1" green="0.185564382" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <fontDescription key="font" name="PhosphatePro-Inline" family="Phosphate Pro" pointSize="23"/>
+                                </label>
+                            </items>
+                            <color key="backgroundColor" red="0.1019607843" green="0.078431372550000003" blue="0.13725490200000001" alpha="1" colorSpace="calibratedRGB"/>
+                        </group>
+                        <group width="1" height="1" alignment="left" id="YSV-5G-WH9">
+                            <items>
+                                <timer alignment="center" verticalAlignment="center" textAlignment="center" previewedSeconds="1350" id="8D6-G6-Ta6">
+                                    <color key="textColor" red="1" green="0.185564382" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <fontDescription key="font" name="PhosphatePro-Inline" family="Phosphate Pro" pointSize="47"/>
+                                    <calendarUnit key="units" minute="YES" second="YES"/>
+                                </timer>
+                            </items>
+                        </group>
+                    </items>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="717" y="156"/>
         </scene>
         <!--Static Interface-->
         <scene sceneID="AEw-b0-oYE">
